[gd_scene load_steps=11 format=3 uid="uid://d0qgq1jw3fwrt"]

[ext_resource type="Script" path="res://ChatRoom/chat_room.gd" id="1_d005w"]
[ext_resource type="Texture2D" uid="uid://1mqqsoj4ka2c" path="res://ChatRoom/Assets/mockup_cyberpunk_souvenir.png" id="1_mjiwe"]
[ext_resource type="StyleBox" uid="uid://b6my5kblcuosw" path="res://ChatRoom/Assets/TransparentBackground.tres" id="2_6atam"]
[ext_resource type="StyleBox" uid="uid://drcnk08k078lc" path="res://ChatRoom/Assets/PatientTextBox.tres" id="3_vap84"]
[ext_resource type="LabelSettings" uid="uid://dcqvu4l5j25aa" path="res://ChatRoom/Assets/PatientTextDialog.tres" id="4_jdpaq"]
[ext_resource type="PackedScene" uid="uid://cf3unc30pl34t" path="res://ChatRoom/PatientInformation.tscn" id="6_y6lsd"]
[ext_resource type="StyleBox" uid="uid://ddi324rmxgjd2" path="res://ChatRoom/Assets/DoctorTextBox.tres" id="7_57520"]
[ext_resource type="LabelSettings" uid="uid://ctvfej0ou1v2r" path="res://ChatRoom/Assets/DoctorTextDialog.tres" id="8_v3iwd"]
[ext_resource type="Theme" uid="uid://26i86b5u38c2" path="res://ConsoleButton.tres" id="9_iln06"]
[ext_resource type="Script" path="res://ChatRoom/money_label.gd" id="10_qn2xg"]

[node name="ChatRoom" type="CanvasLayer"]
script = ExtResource("1_d005w")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_mjiwe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.01
theme_override_styles/panel = ExtResource("2_6atam")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.09
theme_override_styles/panel = ExtResource("2_6atam")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="PatientDialog" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_vap84")
text = "Hi doctor,
I have a problem with an old memory of my brother.
We always had a good relationship and grew up together. Except on my 170th anniversary where he got into a cyber-rage and slaughtered my psycho-cake.
To this day, I still dream of its hainous gaze and it Pocket-Massacror-3099B splashing cake on the whole party.
I'd like to forget about it and have a sane relationship with my brother again. 
It's been 60 years and I still can't look at him normally."
label_settings = ExtResource("4_jdpaq")
autowrap_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.37
theme_override_styles/panel = ExtResource("2_6atam")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PatientInfo" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer" instance=ExtResource("6_y6lsd")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="PanelContainer7" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_6atam")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer/PanelContainer7"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer/PanelContainer7/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_6atam")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer/PanelContainer7/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer6" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer/PanelContainer7/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme_override_styles/panel = ExtResource("2_6atam")

[node name="JackInBtn" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer/PanelContainer7/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("9_iln06")
theme_override_styles/disabled_mirrored = ExtResource("2_6atam")
disabled = true
text = "Jack"

[node name="PanelContainer5" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer/PanelContainer7/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer/PanelContainer7/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.23
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.05
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_6atam")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_6atam")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_6atam")

[node name="ShopBtn" type="Button" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("9_iln06")
disabled = true
text = "Shop"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.16
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer5" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.36
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = ExtResource("2_6atam")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer6" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme_override_styles/panel = ExtResource("2_6atam")

[node name="MoneyLabel" type="Label" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("7_57520")
text = "$ 000000"
label_settings = ExtResource("8_v3iwd")
script = ExtResource("10_qn2xg")

[node name="PanelContainer5" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme_override_styles/panel = ExtResource("2_6atam")

[node name="PanelContainer6" type="PanelContainer" parent="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.34
theme_override_styles/panel = ExtResource("2_6atam")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer2/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_6atam")

[node name="DoctorDialog" type="Label" parent="VBoxContainer/PanelContainer2/CenterContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/normal = ExtResource("7_57520")
text = "Yes."
label_settings = ExtResource("8_v3iwd")

[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/VBoxContainer/PanelContainer7/HBoxContainer/VBoxContainer/JackInBtn" to="." method="OnJackPressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/PanelContainer2/HBoxContainer/PanelContainer/VBoxContainer/ShopBtn" to="." method="OnShopPressed"]
